cambios desdes GH

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
-    />
+    >
     <title>Studio</title>
   </head>
   <body>
@@ -41,8 +41,8 @@
           <div class="contenido">
             <h4>ATENCION A LOS CLIENTES</h4>
             <p>
-              Nos adentramos en todos los detalles y <br />
-              procesos de su negocio, para así <br />
+              Nos adentramos en todos los detalles y <br>
+              procesos de su negocio, para así <br>
               desarrollar una solución a su medida.
             </p>
           </div>
@@ -76,20 +76,19 @@
           class="image1-3"
           src="images/picture1.jpg"
           width="373"
-          alt="imagen de programacion"
-        />
+          alt="imagen de programacion">
         <img
           class="image1-3"
           src="images/picture2.jpg"
           width="373"
           alt="imagen de programacion2"
-        />
+        >
         <img
           class="image1-3"
           src="images/picture3.jpg"
           width="373"
           alt="imagen de programacion3"
-        />
+        >
       </section>
       <section class="nuestro-equipo">
         <div>
@@ -99,7 +98,7 @@
             src="images/picture4.jpg"
             width="270"
             alt="hombre sonriente con gafas"
-          />
+          >
           <h5>Andrés Cubo</h5>
           <p>Diseñador de Productos</p>
         </div>
@@ -110,7 +109,7 @@
             src="images/picture5.jpg"
             width="270"
             alt="mujer sonriente con gafas"
-          />
+          >
           <h5>Carla Palacios</h5>
           <p>Desarrolladora Frontend</p>
         </div>
@@ -121,7 +120,7 @@
             src="images/picture6.jpg"
             width="270"
             alt="hombre sonriente con"
-          />
+          >
           <h5>Mario Dorado</h5>
           <p>Marketing</p>
         </div>
@@ -132,7 +131,7 @@
             src="images/picture7.jpg"
             width="270"
             alt="hombre sonriente con gafas y barba"
-          />
+          >
           <h5>Pablo Mijangos</h5>
           <p>Diseñador IU</p>
         </div>
